# sillyPoker

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  config.h.in  configure  configure.in  qt.m4
debian/: changelog  control  copyright  menu  rules
doc/: Makefile.am  Makefile.in  Poker-HOWTO.txt  sillypoker.1
src/: Makefile.am  Makefile.in  ai.cpp  cards.cpp  conf.cpp  conf.h  games.cpp  main.cpp  ncurses.cpp  ncurses.h  player.cpp  poker.h  qtui.cpp  qtui.h  score.cpp  scrollwin.cpp  scrollwin.h  stats.cpp  stats.h  ui.cpp  ui.h  util.cpp
src/menus/: Makefile.am  Makefile.in  attrs.h  deskman.c  deskman.h  error.c  error.h  input.c  input.h  menurt.c  menurt.h  stdwinset.c  stdwinset.h
